<resources>
    <string name="app_chinese">崇德堂</string>
    <string name="nav_menu_index">首页</string>
    <string name="nav_menu_exhibit">藏品</string>
    <string name="nav_menu_shop">文创商店</string>
    <string name="nav_menu_my">我的</string>
    <string name="toolbar_search">搜索</string>
    <string name="toolbar_settings">设置</string>
    <string name="feedback_hint">请描述您在APP使用过程中的问题</string>
    <string name="name_hint">请输入新昵称……</string>
    <string name="new_phone_hint">请输入新手机号</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="input_old_pwd">输入原密码</string>
    <string name="input_new_pwd">输入新密码</string>
    <string name="input_new_pwd_hint">密码为6–15位大小写字母或数字</string>
    <string name="repeat_new_pwd">再次输入新密码</string>
    <string name="search_history">最近搜索</string>
    <string name="search_collection">藏品推荐</string>
    <string name="search_product">文创推荐</string>
    <string name="search_hint">搜索展品/文创</string>
    <string name="no_data">暂无地址信息</string>
    <string name="exhibit_title">藏品</string>
    <string name="shop_title">文创商店</string>
    <string name="my_title">我的</string>
    <string name="index_entry1">全景崇德</string>
    <string name="index_entry2">活动预约</string>
    <string name="index_entry3">每日一联</string>
    <string name="index_entry4">崇德讲堂</string>
    <string name="index_entry5">崇德缘起</string>
    <string name="index_entry6">联系我们</string>
    <string name="all">全部</string>
    <string name="index_moment">展馆动态</string>
    <string name="index_info">行业资讯</string>
    <string name="my_order">我的订单</string>
    <string name="my_shopping">购物车</string>
    <string name="address">收货地址</string>
    <string name="notice">消息通知</string>
    <string name="appointment">我的预约</string>
    <string name="user_collection">我的收藏</string>
    <string name="feedback">意见反馈</string>
    <string name="settings">设置</string>
    <string name="user_info">个人资料</string>
    <string name="hot_label">热搜榜</string>
    <string name="exhibit_tab_title1">书法·系列</string>
    <string name="exhibit_tab_title2">篆刻·系列</string>
    <string name="exhibit_tab_title3">牌匾·系列</string>
    <string name="logout">退出登录</string>
    <string name="appoint_success">预约成功</string>
    <string name="appoint_date">预约日期</string>
    <string name="detail">详情</string>
    <string name="appoint_id">预约编号：</string>
    <string name="user_icon">头像</string>
    <string name="username">用户名</string>
    <string name="user_gender">性别</string>
    <string name="user_birthday">生日</string>
    <string name="confirm">确定</string>
    <string name="update_name">修改名称</string>
    <string name="update_name_tip">限2–12个中文、英文或数字</string>
    <string name="update_name_wrong_tip">名称不合法！限2–12个中文、英文或数字</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="cancel">取消</string>
    <string name="take_photo">拍照</string>
    <string name="album">打开相册</string>
    <string name="user_phone">手机号</string>
    <string name="user_mail">邮箱</string>
    <string name="address_title">地址管理</string>
    <string name="add_address">新建收货地址</string>
    <string name="Origin_tab_text1">走进崇德堂</string>
    <string name="Origin_tab_text2">崇德缘起</string>
    <string name="Origin_tab_text3">馆长介绍</string>
    <string name="origin_title">崇德缘起</string>
    <string name="culture_tab_text1">匾额楹联</string>
    <string name="culture_tab_text2">书画篆刻</string>
    <string name="culture_tab_text3">造纸印刷</string>
    <string name="culture_tab_text4">拓片雕版</string>
    <string name="update_phone">更换手机号</string>
    <string name="update_pwd">修改密码</string>
    <string name="phone_validate_tip">为了您的安全，该操作需要验证手机号</string>
    <string name="validate">验证码</string>
    <string name="validate_hint">请输入验证码</string>
    <string name="get_validate">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="current_bind_phone">当前绑定手机号</string>
    <string name="logout_content">确定退出当前账号</string>
    <string name="copyright">版权声明</string>
    <string name="version">当前版本</string>
    <string name="current_version">当前版本v1.0.0</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register_entry_tip">没有账号？注册一个</string>
    <string name="register">注册</string>
    <string name="repeat_wrong_tip">重复输入不一致！</string>
    <string name="input_phone_wrong_tip">手机号不合法！</string>
    <string name="address_detail">地址详情</string>
    <string name="consignee">收货人</string>
    <string name="province_city">省份/城市</string>
    <string name="detailed_address">详细地址</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="select_address">选择地址</string>
    <string name="address_delete_confirm">确定删除该地址</string>
    <string name="appoint_traffic">北京崇德堂匾额博物馆\n地址：北京市朝阳区王四营高碑店398号\n乘车路线：可乘公交11路、455路、363路观音堂站下车南行200米</string>
    <string name="appoint_notice">一、请自觉爱护馆内公共设施及展品，若造成损坏需给予赔偿。\n二、高龄老人、残疾人士、幼儿等观众须由亲友陪同参观。\n三、请自觉保持馆内环境卫生。馆内禁止吸烟，禁止随地吐痰，禁止饮食，禁止携带宠物及危险品。\n四、自觉遵守参观秩序，禁止攀爬躺卧、大声喧哗。自觉服从馆内工作人员的管理。\n五、如遇重大或临时性活动，请尊重馆方安排。\n六、参观需要提前预约，并登记预约人姓名及联系方式、参观时间、人数及要求等。\n七、馆内严禁任何未经批准的经营活动，如外来个人或团体私自收取讲解或活动费及外来团体推销自己产品等。\n八、疫情防控期间对博物馆参观实行管控，具体通知请关注“北京崇德堂”微信公众号。</string>
    <string name="appoint">参观预约</string>
    <string name="contact_content">电话：010–67777359 13488885887\n邮箱：cdt@cdtde.com\n邮编：100123</string>
    <string name="appoint_name">预约人姓名：</string>
    <string name="appoint_phone">手机号：</string>
    <string name="appoint_dialog_name">真实姓名</string>
    <string name="appoint_number">人数</string>
    <string name="phone">手机号</string>
    <string name="select_date">选择日期</string>
    <string name="appoint_info_number">人数：</string>
    <string name="appoint_info_time">下单时间：</string>
    <string name="appoint_info_money">金额：</string>
    <string name="product_detail">商品详情</string>
    <string name="buy">立即购买</string>
    <string name="product_intro">商品介绍</string>
    <string name="product_launch_time">上架时间：</string>
    <string name="add_shopping">加入购物车</string>
    <string name="collection_detail">藏品详情</string>
    <string name="select_tip">已选：</string>
    <string name="edit">删除</string>
    <string name="exit_edit">退出删除</string>
    <string name="all_select">全选</string>
    <string name="settle">结算</string>
    <string name="sum_tip">总计：</string>
    <string name="collection">藏品</string>
    <string name="product">商品</string>
    <string name="user_feedback">意见反馈</string>
    <string name="commit">提交</string>
    <string name="collect">收藏</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="opening_time">开馆时间：9:00\n闭馆时间：17:00\n停止入馆：16:00\n观众离场：16:30</string>
    <string name="fill_order">确认订单</string>
    <string name="commit_order">提交订单</string>
    <string name="order_address">收货地址</string>
    <string name="delete_tip">左滑可删除商品</string>
    <string name="empty_tip">内容为空</string>
    <string name="fill_appoint">填写预约信息</string>
    <string name="select_order_address">选择收货地址</string>
    <string name="delete_shopping_confirm">确定删除该商品</string>
    <string name="user_order">我的订单</string>
    <string name="order_confirm">确认收货</string>
    <string name="order_detail">订单详情</string>
    <string name="order_id">订单编号</string>
    <string name="order_date">下单日期</string>
    <string name="order_info">收货信息</string>
    <string name="order_delete">删除订单</string>
    <string name="delete_order_confirm">确定删除该订单</string>
    <string name="order_confirm_tip">确认要收货吗</string>
    <string name="forget_password">忘记密码</string>
</resources>