<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    style="@style/DialogButtonTextStyle"
                    android:layout_marginVertical="10dp"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout_content"
                    style="@style/DialogContentTextStyle"
                    android:gravity="center"
                    android:layout_marginVertical="10dp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_2"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/cancel"
                        android:id="@+id/cancel"
                        style="@style/DialogButtonTextStyle"/>
                <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/gray_2"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/confirm"
                        android:id="@+id/confirm"
                        style="@style/DialogButtonTextStyle"/>
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>