<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="handler"
                type="com.cdtde.chongdetang.view.my.setting.userInfo.PhotoDialog.Handler" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/white"
            android:orientation="vertical">

        <TextView
                android:id="@+id/take_photo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/take_photo"
                style="@style/DialogButtonTextStyle"
                android:onClick="@{handler.takePhoto}"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_6" />

        <TextView
                android:id="@+id/open_album"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/album"
                style="@style/DialogButtonTextStyle"
                android:onClick="@{handler.openAlbum}"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_6" />

        <TextView
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/cancel"
                style="@style/DialogButtonTextStyle"
                android:onClick="@{handler.cancel}"/>


    </LinearLayout>
</layout>