<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.cdtde.chongdetang.viewModel.my.RegisterViewModel" />
        <import type="android.view.View"/>
    </data>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_white"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="50dp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="30dp"
                android:hint="@string/input_phone"
                style="@style/TextInputEditStyle">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/text_regular"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:drawableStart="@drawable/default_photo"
                    android:drawablePadding="10dp"
                    android:afterTextChanged="@{s->viewModel.setPhone(s.toString())}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/input_phone_wrong_tip"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="30dp"
                android:fontFamily="@font/text_regular"
                android:textColor="@color/main_variant_color"
                android:layout_marginBottom="10dp"
                android:visibility="@{viewModel.phoneValidity ? View.INVISIBLE : View.VISIBLE}"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="30dp"
                android:hint="@string/input_new_pwd"
                app:helperTextEnabled="true"
                app:helperText="@string/input_new_pwd_hint"
                app:passwordToggleEnabled="true"
                style="@style/TextInputEditStyle">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/text_regular"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:drawableStart="@drawable/password2"
                    android:drawablePadding="10dp"
                    android:afterTextChanged="@{s->viewModel.setPassword(s.toString())}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/input_new_pwd_hint"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="30dp"
                android:fontFamily="@font/text_regular"
                android:layout_marginBottom="5dp"
                android:textColor="@{viewModel.passwordValidity ? @color/gray_1 : @color/main_variant_color}"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="30dp"
                android:hint="@string/repeat_new_pwd"
                app:passwordToggleEnabled="true"
                style="@style/TextInputEditStyle">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/text_regular"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:drawableStart="@drawable/password2"
                    android:drawablePadding="10dp"
                    android:afterTextChanged="@{s->viewModel.setRepeatPassword(s.toString())}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/repeat_wrong_tip"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="30dp"
                android:fontFamily="@font/text_regular"
                android:textColor="@color/main_variant_color"
                android:layout_marginBottom="10dp"
                android:visibility="@{viewModel.repeatValidity ? View.INVISIBLE : View.VISIBLE}"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/button_bg"
                android:text="@string/register"
                style="@style/BigButtonTextStyle"
                android:id="@+id/register"/>

    </LinearLayout>
</layout>