<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="state"
                type="com.cdtde.chongdetang.view.index.appoint.AppointDialog.States" />
        <variable
                name="handler"
                type="com.cdtde.chongdetang.view.index.appoint.AppointDialog.Handler" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bottom_dialog_bg">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill_appoint"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/regular"
                android:layout_marginVertical="10dp"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_4"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/appoint_dialog_name"
                style="@style/TextInputEditStyle">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:id="@+id/subscriber_edit"
                    android:textColor="@color/black"
                    android:fontFamily="@font/text_regular"
                    android:drawableStart="@drawable/default_photo"
                    android:drawablePadding="10dp"
                    edit_length="@{15}"
                    android:text="@={state.appointment.subscriber}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone"
                style="@style/TextInputEditStyle">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:id="@+id/phone_edit"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/text_regular"
                    android:drawableStart="@drawable/phone_fill"
                    android:drawablePadding="10dp"
                    edit_length="@{15}"
                    android:text="@={state.appointment.phone}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/appoint_number"
                style="@style/TextInputEditStyle">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/number_edit"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/text_regular"
                    android:drawableStart="@drawable/appoint_number"
                    android:drawablePadding="10dp"
                    android:text="@={state.appointment.number}" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:hint="@string/appoint_date"
                    style="@style/TextInputEditStyle">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="16sp"
                        android:id="@+id/date_edit"
                        android:textColor="@color/black"
                        android:fontFamily="@font/text_regular"
                        text_date="@{state.appointment.orderTime}"
                        android:longClickable="false"
                        android:focusable="false"
                        android:onClick="@{handler.selectDate}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/appoint_date"
                    android:layout_marginStart="7dp"
                    android:contentDescription="@string/select_date"
                    android:id="@+id/select_date"
                    android:onClick="@{handler.selectDate}"/>
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_3"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:id="@+id/cancel"
                    android:background="?attr/selectableItemBackground"
                    style="@style/DialogButtonTextStyle"
                    android:onClick="@{handler.cancel}"/>
            <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray_3"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/confirm"
                    android:id="@+id/confirm"
                    android:background="?attr/selectableItemBackground"
                    style="@style/DialogButtonTextStyle"
                    android:onClick="@{handler.confirm}"/>
        </LinearLayout>
    </LinearLayout>
</layout>