<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
                name="state"
                type="com.cdtde.chongdetang.view.index.search.SearchFragment.States" />
        <variable
                name="handler"
                type="com.cdtde.chongdetang.view.index.search.SearchFragment.Handler" />
    </data>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/history_label"
                android:paddingHorizontal="15dp"
                android:visibility="@{state.isEmpty ? View.GONE : View.VISIBLE}">

            <TextView
                    style="@style/SearchLabelStyle"
                    android:text="@string/search_history"
                    android:layout_alignParentStart="true" />

            <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/delete"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/delete_btn"
                    android:onClick="@{handler.clear}"/>
        </RelativeLayout>

        <com.zhy.view.flowlayout.TagFlowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:max_select="1"
                android:padding="15dp"
                android:id="@+id/history_flow"
                android:visibility="@{state.isEmpty ? View.GONE : View.VISIBLE}"
                tag_data="@{state.histories}"
                tag_onClick="@{handler.contentConsumer}"/>


        <TextView
                style="@style/SearchLabelStyle"
                android:text="@string/search_collection"
                android:layout_marginStart="15dp" />

        <com.zhy.view.flowlayout.TagFlowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:max_select="1"
                android:padding="15dp"
                android:id="@+id/collection_flow"
                tag_data="@{state.collections}"
                tag_onClick="@{handler.contentConsumer}"/>


        <TextView
                style="@style/SearchLabelStyle"
                android:text="@string/search_product"
                android:layout_marginStart="15dp" />

        <com.zhy.view.flowlayout.TagFlowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:max_select="1"
                android:padding="15dp"
                android:id="@+id/product_flow"
                tag_data="@{state.products}"
                tag_onClick="@{handler.contentConsumer}"/>

    </LinearLayout>
</layout>